...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nostpic"
    tools:context=".Entry">

  <Button
      android:id="@+id/button1"
      style="@android:style/Widget.Button.Inset"
      android:layout_width="243dp"
      android:layout_height="50dp"
      android:layout_marginTop="468dp"
      android:background="#dda162"
      android:onClick="login"
...
