...
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_package">package</string>
    <string name="app_name">souvenir</string>
    <string name="action_sign_in_short">Register</string>
    <string name="start_authentication">START AUTHENTICATION</string>
    <string name="fingerprint_dialog">Fingerprint Dialog</string>
    <string name="confirm_fingerprint_to_continue">Confirm fingerprint to continue.</string>
    <string name="touch_sensor">Touch sensor</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
...
